# galCLP

./: .gitignore  CMakeLists.txt
cmake/: CPM.cmake
exec/: CMakeLists.txt  main.cpp
exec/test/: test.cpp
include/: command_line_parser.hpp
